src/styles/global.css
@import url('https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap');

.syne-mono-regular {
  font-family: "Syne Mono", monospace;
  font-weight: 400;
  font-style: normal;
}

:root {
  --primary-background-color: #222;
  --secondary-background-color: #111;
  --primary-text-color: #FDB514;
  --secondary-text-color: #ffd67e;
  --primary-font-stack: "Syne Mono", "Courier New", Courier;
}

html {
  color: var(--primary-text-color);
  font-size: 10px;
  background-color: var(--primary-background-color);
  font-family: var(--primary-font-stack);
}

* {
  box-sizing: border-box;
  /* border: 1px solid white; */
  margin: 0;
  padding: 0;
  font-size: inherit;
}


body {
  display: flex;
  flex-direction: column;
  /* font-size: 1.6rem; */
}

header {
  margin: 0 auto;
  margin-bottom: -13px;
  padding: 100px 0 0;
  width: 92vw;
  z-index: +1;

  display: flex;
  flex-direction: row;
  justify-content: space-between;

  color: var(--secondary-text-color);
  font-size: 1.8rem;
}

header * {
  text-shadow: 0px 0px 2px #f9f5eb;
}

header nav {
  display: flex;
  align-items: center;
  gap: 5px;
}

.menu {
  font-family: inherit;
  background-color: var(--secondary-text-color);
  box-shadow: 0 0 5px var(--secondary-text-color);
  border: none;
  border-radius: 5px;
  /* color: #fff; */
  font-size: 1.6rem;
  padding: 5px 10px;
}

.nav-links {
  width: 100%;
  display: none;
  margin: 0;
}

.nav-links a {
  display: block;
  text-align: center;
  padding: 10px 0;
}

.container {
  display: flex;
  flex-direction: column;
  /* justify-content: center; */
  gap: 15px;
  
  width: 90vw;
  min-height: 100vh;
  background: var(--secondary-background-color);
  margin: 0 auto;
  padding: 70px 70px;
  border-radius: 20px 20px 0 0;
  box-shadow: 
  0 0 50px #111;
  /* cursor: none; */
}

.container h1 {
  align-self: center;
}

.hero {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 150px;
}

.hero-image {
  position: absolute;
  bottom: 0;
  right: 0;
  z-index: -1;
}

footer {
  margin-top: 25px;
  font-size: 1.2rem;
  align-self: center;
  /* position: s; */
  /* bottom: 15px; */
}

h1 {
  font-size: 4.8rem;
  text-shadow: 0 0 0.5rem var(--secondary-text-color);
  
}

h2 {
  font-size: 2.7rem;
}

h3 {
  font-size: 1.8rem;
}

p {
  font-size: 1.6rem;
  color: var(--secondary-text-color);
  text-align: justify;
}

ul {
  list-style: none;
}

.logotype {
  transition: transform 0.3s ease-out;
  cursor: none;
}

.logotype:hover {
  transform-origin: bottom right;
  transform: rotate(-0.004turn);
}

.hero > h1 {
  transition: transform 5s ease;
  cursor: none;
}

.hero > h1:hover {
  transform: scale(1.4);
}

a {
  color: var(--secondary-text-color);
  text-decoration: none;
  /* padding: 5px; */
  padding-bottom: 0.3rem;
  transition: transform 0.7s ease;
}

nav a:hover, a:focus {
  transform: scale(1.1, 1.1);
  /* text-decoration: underline dotted; */
  border-top: 1px dotted var(--secondary-text-color);
  border-bottom: 1px dotted var(--secondary-text-color);
}

.container a:hover, a:focus {
  text-decoration: dotted underline;
}

sup {
  font-size: 1.2rem;
}

:has(.menu[aria-expanded="true"]) .nav-links {
  display: unset;
}

@media screen and (min-width: 600px) {
  .nav-links {
    /* margin-left: 5em; */
    /* display: block; */
    /* position: static; */
    /* width: auto; */
    /* background: none; */
    display: flex;
    align-items: center;
    gap: 10px;
  }
  
  /* .nav-links a {
    display: inline-block;
    padding: 15px 20px;
  } */

  .menu {
    display: none;
  }
}

@media screen and (min-width: 920px) {
  header {
    width: 915px;
  }

  .container {
    width: 900px;
  }
}

